--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="profile-header">
             <img src="https://i.ibb.co/FWHfhbf/1000011811.jpg" alt="Profile Picture">
             <div>
-                <h1>Abhishek Pawar</h1>
+                <h1>ABHISHEK PAWAR</h1>
                 <p><strong>Software Developer</strong></p>
                 <p>Mohali, PB - IN 160062 | +91 8847034933 | abhipawarraipur@gmail.com</p>
             </div>
