--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
             </ul>
 
             <h3 class="section-title">WORK EXPERIENCE</h3>
-            <h5>Trainer & Project Developer | Soft Elevation Pvt. Ltd.</h5>
+            <h5>Trainee & Project Developer | Soft Elevation Pvt. Ltd.</h5>
             <p><strong>6 months experience</strong></p>
-            <p>Project Overview: Collaborated on a live project aimed at [describe the project's purpose, e.g., developing a cross-platform mobile application for streamlining user data management].</p>
             <p>Role and Responsibilities: Conducted training sessions for junior developers, covering core concepts in React Native, state management, and effective debugging. Led sessions on best practices in coding, UI/UX principles, and project workflows.</p>
             <p>Technologies Used: Utilized React Native, Redux, and integrated APIs to build efficient, scalable features. Emphasized code modularity, team collaboration, and real-world problem-solving techniques.</p>
             <p>Impact: Successfully guided team members through practical applications, resulting in increased productivity and a smoother project lifecycle. Delivered a functional, user-friendly application that met client requirements.</p>
