--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
             </ul>
 
             <h3 class="section-title">WORK EXPERIENCE</h3>
-            <h5>Trainee & Project Developer | Soft Elevation Pvt. Ltd.</h5>
-            <p><strong>6 months experience</strong></p>
-            <p>Role and Responsibilities: Conducted training sessions for junior developers, covering core concepts in React Native, state management, and effective debugging. Led sessions on best practices in coding, UI/UX principles, and project workflows.</p>
-            <p>Technologies Used: Utilized React Native, Redux, and integrated APIs to build efficient, scalable features. Emphasized code modularity, team collaboration, and real-world problem-solving techniques.</p>
-            <p>Impact: Successfully guided team members through practical applications, resulting in increased productivity and a smoother project lifecycle. Delivered a functional, user-friendly application that met client requirements.</p>
+            <h5>Trainee (React Native Developer)| Soft Elevation Pvt. Ltd., Mohali</h5>
+            <p><strong>May 2024 – Present (6 months)</strong></p>
+            <p>Contributed to a live project, gaining hands-on experience in React Native and related technologies.</p>
+            <p>Worked on implementing clean and efficient code for mobile application development.</p>
+            <p>Collaborated with the development team to ensure seamless integration and functionality.</p>
+            <p>Strengthened problem-solving and teamwork abilities in a professional environment.</p>
 
             <h3 class="section-title">CERTIFICATIONS</h3>
             <ul class="list-group">
