--- a/index.html
+++ b/index.html
@@ -3,182 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abhishek Pawar - Software Developer Resume</title>
+    <title>Abhishek Pawar - Portfolio</title>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Poppins Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            font-family: 'Oswald', sans-serif;
         }
-        .container {
-            margin-top: 30px;
-            flex-grow: 1;
+        .hero {
+            background: #f8f9fa;
+            padding: 60px 20px;
+            text-align: center;
         }
-        .profile-header {
-            display: flex;
-            align-items: center;
-            margin-bottom: 30px;
-            flex-wrap: wrap;
-        }
-        .profile-header img {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%; /* Rounded profile photo */
-            margin-right: 20px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Added shadow effect */
-        }
-        .profile-header h1 {
-            color: #0066cc;
-            font-size: 2rem;
-            font-weight: 600;
-        }
-        .profile-header p {
-            font-size: 1.2rem;
-            margin-top: 5px;
-        }
-        .section-title {
-            margin-top: 20px;
-            font-weight: 600;
-            color: #0066cc;
-            font-size: 1.5rem;
-        }
-        .content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        .hero h1 {
+            font-size: 3rem;
             margin-bottom: 20px;
         }
-        .list-group-item {
-            border: none;
-            padding-left: 0;
-            font-size: 1.1em;
+        .hero p {
+            font-size: 1.2rem;
+            color: #6c757d;
         }
-        .list-group-item:nth-child(odd) {
-            background-color: #f7f7f7;
+        .card-title {
+            font-weight: 600;
         }
-        .footer {
-            background-color: #0066cc;
+        footer {
+            background: #343a40;
             color: white;
             text-align: center;
-            padding: 10px;
-            position: relative;
-            width: 100%;
-            margin-top: 20px;
+            padding: 20px;
         }
-        .footer a {
-            color: white;
+        footer a {
+            color: #f8f9fa;
             text-decoration: none;
-        }
-        .footer a:hover {
-            text-decoration: underline;
-        }
-        /* Media Queries for Responsiveness */
-        @media (max-width: 768px) {
-            .profile-header {
-                text-align: center;
-                flex-direction: column;
-            }
-            .profile-header img {
-                margin-right: 0;
-                margin-bottom: 15px;
-            }
-            .content {
-                padding: 15px;
-            }
-            .section-title {
-                font-size: 1.3rem;
-            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="profile-header">
-            <img src="https://i.ibb.co/FWHfhbf/1000011811.jpg" alt="Profile Picture">
-            <div>
-                <h1>ABHISHEK PAWAR</h1>
-                <p><strong>Software Developer</strong></p>
-                <p>Mohali, PB - IN 160062 | +91 8847034933 | abhipawarraipur@gmail.com</p>
+
+    <!-- Hero Section -->
+    <div class="hero">
+        <h1>Abhishek Pawar</h1>
+        <p><b>SOFTWARE DEVELOPER</b> </p>
+        <a href="mailto:abhipawarraipur@gmail.com" class="btn btn-primary">Contact Me</a>
+    </div>
+
+    <!-- About Section -->
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">About Me</h2>
+        <p>I am a passionate React.js and React Native Developer with hands-on experience in building efficient, cross-platform mobile and web applications. I bring strong foundational skills in JavaScript, React.js, and React Native, with a dedication to writing clean, maintainable, and scalable code.</p>
+    </div>
+
+    <!-- Skills Section -->
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">Technical Skills</h2>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <h5>Frontend</h5>
+                <p>React Native, React.js, JavaScript (ES6+)</p>
+            </div>
+            <div class="col-md-4">
+                <h5>Tools & Libraries</h5>
+                <p>Redux, Context API, Material-UI, Figma</p>
+            </div>
+            <div class="col-md-4">
+                <h5>Version Control & OS</h5>
+                <p>Git, GitHub, MacOS, MS-Windows, Linux</p>
             </div>
         </div>
+    </div>
 
-        <div class="content">
-            <h3 class="section-title">SUMMARY</h3>
-            <p>I am a React Native developer with a Bachelor's in Computer Applications, experienced in building clean, user-friendly mobile apps. Passionate about cross-platform development, I bring strong problem-solving skills and adaptability to innovative projects.</p>
-
-            <h3 class="section-title">TECHNICAL SKILLS</h3>
-            <ul class="list-group">
-                <li class="list-group-item">React Native: Proficient in React Native, Redux/Context API, Git, responsive design (react-native-paper), and AsyncStorage for local storage.</li>
-                <li class="list-group-item">JavaScript (ES6+): Experienced in advanced JavaScript for building sophisticated applications and improving performance.</li>
-                <li class="list-group-item">Figma: Proficient in Figma for UI/UX design, including wireframing, prototyping, and creating responsive designs.</li>
-                <li class="list-group-item">Operating Systems: Experienced with multiple operating systems, including MacOS, MS-Windows, and Linux.</li>
-                <li class="list-group-item">Applications: Proficient in Microsoft Office Suite (Excel, Word, Outlook, PowerPoint) for effective documentation, data analysis, and presentations.</li>
-            </ul>
-
-            <h3 class="section-title">WORK EXPERIENCE</h3>
-            <h5>Trainee (React Native Developer)| Soft Elevation Pvt. Ltd., Mohali</h5>
-            <p><strong>May 2024 – Present (6 months)</strong></p>
-            <p>Contributed to a live project, gaining hands-on experience in React Native and related technologies.</p>
-            <p>Worked on implementing clean and efficient code for mobile application development.</p>
-            <p>Collaborated with the development team to ensure seamless integration and functionality.</p>
-            <p>Strengthened problem-solving and teamwork abilities in a professional environment.</p>
-
-            <h3 class="section-title">CERTIFICATIONS</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Great Learning - Proficient in JavaScript fundamentals and advanced programming techniques, emphasizing clean code and modern web development practices.</li>
-                <li class="list-group-item">Web Designing – Center of Advanced Learning in Computer: Gained skills in UI/UX design and responsive web layouts, focusing on creating visually appealing and user-friendly websites.</li>
-            </ul>
-
-            <h3 class="section-title">PERSONAL SKILLS</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Problem-Solving: Strong analytical skills to diagnose issues and provide effective solutions.</li>
-                <li class="list-group-item">Team Collaboration: Effective in working in a team environment, utilizing tools like GitHub for project collaboration.</li>
-                <li class="list-group-item">Time Management: Ability to manage multiple tasks and projects efficiently.</li>
-            </ul>
-
-            <h3 class="section-title">PROJECTS</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Calculator App: Built a functional calculator application in React Native, integrating modern JavaScript features to ensure efficient calculations and a clean, user-friendly interface.</li>
-                <li class="list-group-item">To-Do List App: Developed a to-do list application using React Native and advanced JavaScript (ES6+) for task management, focusing on best practices for organized code structure and usability.</li>
-                <li class="list-group-item">Notes App: Built a notes app in React Native where users can create, update, and delete notes. Focused on implementing efficient data management and storage with AsyncStorage, and used JavaScript for smooth navigation and user interactions.</li>
-            </ul>
-
-            <h3 class="section-title">EDUCATION</h3>
-            <p><strong>Bachelor of Computer Applications</strong> - Punjabi University Patiala - (2019 - 2022)</p>
-
-            <h3 class="section-title">PROFESSIONAL PROFILES</h3>
-            <p><strong>GitHub:</strong> <a href="https://github.com/abhishekpawarDev" target="_blank">https://github.com/abhishekpawarDev</a></p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/abhishek-pawar-7a3a1229b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">https://www.linkedin.com/in/abhishek-pawar-7a3a1229b</a></p>
+    <!-- Projects Section -->
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">Projects</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Calculator App</h5>
+                        <p class="card-text">Built a functional calculator in React Native with efficient calculations and clean UI.</p>
+                        <a href="https://github.com/abhishekpawarDev/Computation_Device.git" target="_blank" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">To-Do List App</h5>
+                        <p class="card-text">A task management app using React Native and advanced JavaScript for usability.</p>
+                        <a href="https://github.com/abhishekpawarDev/TODO_APP_REACT_NATIVE.git" target="_blank" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Headline Hub</h5>
+                        <p class="card-text">A React Native app delivering real-time news updates with a user-friendly interface.</p>
+                        <a href="https://github.com/abhishekpawarDev/rnModuleApp.git" target="_blank" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="footer">
-        <p>&copy; 2024 Abhishek Pawar. <br><span style="font-size: 9px;">Last Update 9 November 2024</span></p>
-    </div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Abhishek Pawar. All Rights Reserved.</p>
+        <p><a href="https://www.linkedin.com/in/abhishek-pawar-7a3a1229b/" target="_blank">LinkedIn</a> | <a href="https://github.com/abhishekpawarDev" target="_blank">GitHub</a> | <a href="https://stackoverflow.com/users/28932519/abhishek-pawar" target="_blank">Stack Overflow</a></p>
+    </footer>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Smooth Scroll Script -->
-    <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-    </script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
