--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
             </div>
         </div>
     </div>
-
+    <h2 class="text-center"><ul>PROFESSIONAL EXPERIENCE</ul> </h2>
+      <div class="card col-md-4 mb-4 container" style="width: 18rem;">
+        <img src="noname.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><i>Soft Elevation Pvt. Ltd. , Mohali , India</i> </h5>
+          <p class="card-text">6 Month as a Trainee Experience as a React Native And React JS Developer</p>
+          <a href="https://turquoise-meredith-67.tiiny.site" class="btn btn-primary">Completion Certificate</a>
+        </div>
+      </div>
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Abhishek Pawar. All Rights Reserved.</p>
