--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,34 +13,41 @@
         body {
             font-family: 'Oswald', sans-serif;
         }
+
         .hero {
             background: #f8f9fa;
             padding: 60px 20px;
             text-align: center;
         }
+
         .hero h1 {
             font-size: 3rem;
             margin-bottom: 20px;
         }
+
         .hero p {
             font-size: 1.2rem;
             color: #6c757d;
         }
+
         .card-title {
             font-weight: 600;
         }
+
         footer {
             background: #343a40;
             color: white;
             text-align: center;
             padding: 20px;
         }
+
         footer a {
             color: #f8f9fa;
             text-decoration: none;
         }
     </style>
 </head>
+
 <body>
 
     <!-- Hero Section -->
@@ -52,7 +60,9 @@
     <!-- About Section -->
     <div class="container mt-5">
         <h2 class="text-center mb-4">About Me</h2>
-        <p>I am a passionate React.js and React Native Developer with hands-on experience in building efficient, cross-platform mobile and web applications. I bring strong foundational skills in JavaScript, React.js, and React Native, with a dedication to writing clean, maintainable, and scalable code.</p>
+        <p>I am a passionate React.js and React Native Developer with hands-on experience in building efficient,
+            cross-platform mobile and web applications. I bring strong foundational skills in JavaScript, React.js, and
+            React Native, with a dedication to writing clean, maintainable, and scalable code.</p>
     </div>
 
     <!-- Skills Section -->
@@ -82,8 +92,10 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Calculator App</h5>
-                        <p class="card-text">Built a functional calculator in React Native with efficient calculations and clean UI.</p>
-                        <a href="https://github.com/abhishekpawarDev/Computation_Device.git" target="_blank" class="btn btn-primary">View Project</a>
+                        <p class="card-text">Built a functional calculator in React Native with efficient calculations
+                            and clean UI.</p>
+                        <a href="https://github.com/abhishekpawarDev/Computation_Device.git" target="_blank"
+                            class="btn btn-primary">View Project</a>
                     </div>
                 </div>
             </div>
@@ -91,8 +103,10 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">To-Do List App</h5>
-                        <p class="card-text">A task management app using React Native and advanced JavaScript for usability.</p>
-                        <a href="https://github.com/abhishekpawarDev/TODO_APP_REACT_NATIVE.git" target="_blank" class="btn btn-primary">View Project</a>
+                        <p class="card-text">A task management app using React Native and advanced JavaScript for
+                            usability.</p>
+                        <a href="https://github.com/abhishekpawarDev/TODO_APP_REACT_NATIVE.git" target="_blank"
+                            class="btn btn-primary">View Project</a>
                     </div>
                 </div>
             </div>
@@ -100,29 +114,76 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Headline Hub</h5>
-                        <p class="card-text">A React Native app delivering real-time news updates with a user-friendly interface.</p>
-                        <a href="https://github.com/abhishekpawarDev/rnModuleApp.git" target="_blank" class="btn btn-primary">View Project</a>
+                        <p class="card-text">A React Native app delivering real-time news updates with a user-friendly
+                            interface.</p>
+                        <a href="https://github.com/abhishekpawarDev/rnModuleApp.git" target="_blank"
+                            class="btn btn-primary">View Project</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <h2 class="text-center"><ul>PROFESSIONAL EXPERIENCE</ul> </h2>
-      <div class="card col-md-4 mb-4 container" style="width: 18rem;">
-        <img src="noname.png" class="card-img-top" alt="...">
+    <div class="container">
+        <h2 class="text-center mb-4">Professional Experience</h2>
         <div class="card-body">
-          <h5 class="card-title"><i>Soft Elevation Pvt. Ltd. , Mohali , India</i> </h5>
-          <p class="card-text">6 Month as a Trainee Experience as a React Native And React JS Developer</p>
-          <a href="https://turquoise-meredith-67.tiiny.site" class="btn btn-primary">Completion Certificate</a>
+            <a href="https://www.softelevation.com/" style="text-decoration: none; color: black;">
+                <h5 class="card-title text-center">Soft Elevation Pvt. Ltd. , Mohali , India</h5>
+            </a>
+            <p class="card-text text-center">6 Month as a Trainee Experience as a React Native And React JS Developer
+            </p>
+            <div class="d-flex justify-content-center" style="margin-bottom: 20px;">
+                <a href="https://turquoise-meredith-67.tiiny.site" class="btn btn-primary text-center">
+                    Completion Certificate
+                </a>
+            </div>
+
         </div>
-      </div>
+    </div>
+    <!-- Education and certification part  -->
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">Education</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card border-0 shadow-sm mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">
+                            <a href="http://www.punjabiuniversity.ac.in/" target="_blank" style="text-decoration: none; color: #000000;">
+                                Punjabi University Patiala
+                            </a>
+                        </h5>
+                        <p class="card-text text-center">Bachelor of Computer Applications (BCA)</p>
+                        <p class="text-center text-muted"> (2019 - 2022)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">
+                            <a href="https://www.greatlearning.in/" target="_blank" style="text-decoration: none; color: #000000;">
+                                Center of Advanced Learning in Computer
+                            </a>
+                        </h5>
+                        <p class="card-text text-center"> Web Designing</p>
+                        <div class="text-center">
+                            <a href="https://punjabinfotech.in/" class="btn btn-outline-primary btn-sm mt-2" target="_blank">View Certificate</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Education and certification part  end  -->
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Abhishek Pawar. All Rights Reserved.</p>
-        <p><a href="https://www.linkedin.com/in/abhishek-pawar-7a3a1229b/" target="_blank">LinkedIn</a> | <a href="https://github.com/abhishekpawarDev" target="_blank">GitHub</a> | <a href="https://stackoverflow.com/users/28932519/abhishek-pawar" target="_blank">Stack Overflow</a></p>
+        <p><a href="https://www.linkedin.com/in/abhishek-pawar-7a3a1229b/" target="_blank">LinkedIn</a> | <a
+                href="https://github.com/abhishekpawarDev" target="_blank">GitHub</a> | <a
+                href="https://stackoverflow.com/users/28932519/abhishek-pawar" target="_blank">Stack Overflow</a></p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
